--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.4.5</version>
+		<version>2.5.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>io.github.olgamaciaszek</groupId>
@@ -16,8 +16,8 @@
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>11</java.version>
-		<spring-cloud.version>2020.0.2</spring-cloud.version>
-		<spring-native.version>0.9.2</spring-native.version>
+		<spring-cloud.version>2020.0.3</spring-cloud.version>
+		<spring-native.version>0.10.3</spring-native.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -109,24 +109,29 @@
 						</configuration>
 					</plugin>
 					<plugin>
-						<groupId>org.graalvm.nativeimage</groupId>
-						<artifactId>native-image-maven-plugin</artifactId>
-						<version>21.1.0</version>
+						<groupId>org.graalvm.buildtools</groupId>
+						<artifactId>native-maven-plugin</artifactId>
+						<version>0.9.5</version>
 						<configuration>
 							<buildArgs>--enable-http --enable-https</buildArgs>
-							<!-- The native image build needs to know the entry point to your application -->
-							<mainClass>
-								io.github.olgamaciaszek.nativeeurekaclient.NativeEurekaClientApplication
-							</mainClass>
 						</configuration>
 						<executions>
 							<execution>
+								<id>build-native</id>
 								<goals>
-									<goal>native-image</goal>
+									<goal>build</goal>
 								</goals>
 								<phase>package</phase>
 							</execution>
 						</executions>
+					</plugin>
+					<!-- Avoid a clash between Spring Boot repackaging and native-maven-plugin -->
+					<plugin>
+						<groupId>org.springframework.boot</groupId>
+						<artifactId>spring-boot-maven-plugin</artifactId>
+						<configuration>
+							<classifier>exec</classifier>
+						</configuration>
 					</plugin>
 					<plugin>
 						<groupId>org.springframework.experimental</groupId>
